# Road-Accidents-France-Mlops

./: .dockerignore  .env  .gitattributes  .gitignore  Bin_Modeling.ipynb  Dockerfile.api  Dockerfile.streamlit  GITHUB_PUBLICATION_GUIDE.md  Modeling.txt  QUICK_START.md  README.md  RESTRUCTURING_FINAL.md  RESTRUCTURING_SUMMARY.md  Step 2_Pre-processing_feature-eng.ipynb  Step-3_Modeling.ipynb  Step-3_Modeling_FINAL.ipynb  Step_1_Data mining_DataViz.ipynb  cleanup.py  cleanup_repo.py  config.yml  create_samples.py  docker-compose.yml  download_data.py  export_models.py  main.py  project_structure.txt  pyproject.toml  replace_pages.py  requirements.txt  streamlit-app.py  update_streamlit_data_loading.py
Reports/: Description  Final Project Report.docx
models/: cat_imputer.pkl  column_info.pkl  feature_names_multiclass.pkl  label_encoder.pkl  multiclass_lgbm_model.pkl  num_imputer.pkl  onehot_encoder.pkl
original_project/: MODEL_INTEGRATION.md  Step 2_Pre-processing_feature-eng.ipynb  Step_1_Data mining_DataViz.ipynb  requirements.txt
original_project/Reports/: Report 1 - Exploration, Data Viz, Preprocessing and Feature Engineering.docx  Report 2 - Data Modeling.docx
original_project/models/: binary_lgbm_classweight.pkl  binary_lgbm_model.pkl  standard_scaler.pkl  top40_features_binary.pkl
original_project/sample_data/: caracteristics_sample.csv  places_sample.csv  vehicles_sample.csv
sample_data/: users_sample.csv
scripts/: csv_to_sqlite.py  download_data.py  run_pipeline.py  run_scheduler.py  show_values.py
src/: util.py
src/api/: app.py  app_org.py
src/data/: cleanup_caract.py  cleanup_holidays.py  cleanup_places.py  cleanup_users.py  cleanup_vehicles.py  fetch_data.py  make_dataset.py  sql.py  visualization.py
src/features/: _cleanup_accidents.py  _cleanup_vehicles.py  build_features.py  cleanup_caract.py  cleanup_users.py  final_step.py
src/models/: accident.py  export.py  final_step.py  predict_model.py  select_model.py  select_model_remote.py  split_and_transform.py  (+5 more)
streamlit/: predict_demo.py  streamlit_0.py  streamlit_home.py  streamlit_main.py
streamlit_app/: mlflow_config_loader.py  predict_demo.py  streamlit_0.py  streamlit_data.py  streamlit_diagram.py  streamlit_home.py  streamlit_main.py  streamlit_mlflow.py  streamlit_next.py  streamlit_schedule.py
tests/: test_data.py  test_dummy.py  test_features.py
(+12 files in other folders)
