[project]
name = "road-accidents-france-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipython>=9.10.0",
    "kagglehub>=1.0.0",
    "ruff>=0.15.1",
    "sqlalchemy>=2.0.46",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
