[project]
name = "road-accidents-france-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "altair<5",
    "fastapi>=0.135.1",
    "imblearn>=0.0",
    "lazypredict>=0.2.13",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "mlflow>=2.15.1",
    "pandas>=2.2.0,<3.0.0",
    "protobuf<5.0.0",
    "plotly>=6.6.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "setuptools<70.0.0",
    "shap>=0.49.1",
    "sqlalchemy>=2.0.46",
    "streamlit>=1.55.0",
    "uvicorn>=0.41.0",
    "apscheduler>=3.11.2",
    "streamlit-autorefresh>=1.0.1",
    "dagshub>=0.6.8",
    "boto3>=1.42.73",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipython>=9.10.0",
    "kagglehub>=1.0.0",
    "ruff>=0.15.1",
    "sqlalchemy>=2.0.46", #"sqlalchemy<2.0.0",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
